<resources>
    <string name="app_name">LIMS</string>
    <string name="action_settings">Settings</string>
    <string name="edt_user_text">请输入账号</string>
    <string name="edt_password_text">请输入密码</string>
    <string name="btn_login_text">登陆</string>
    <string name="tv_title_text">欢迎进入机房信息公告平台</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="menu_item_user_text">个人资料</string>
    <string name="ment_item_news_text">我的公告</string>
    <string name="menu_item_watch_text">值班表</string>
    <string name="menu_item_setting_text">设置</string>
    <string name="menu_item_exit_text">退出</string>
    <string name="menu_group_text">其他</string>
    <string name="tv_major_text">软件技术</string>
    <string name="tv_grade_text">2013</string>
    <string name="tv_username_text">林凡荣</string>
    <string name="menu_new_text">发布</string>
    <string name="edt_title_text">请在这里写标题</string>
    <string name="edt_content_text">请在这里写内容</string>
    <string name="tv_tip_text">你暂时没有发布公告</string>
    <string name="ic_menu_delete_text">删除</string>
    <string name="ic_menu_update_text">修改</string>
    <string name="tv_tips_text">信息如有错误，请联系管理员[->关于我们]</string>
    <string name="edt_question_text">在这里输入你反馈的内容</string>
</resources>
